--- a/index.html
+++ b/index.html
@@ -5,21 +5,17 @@
 
     <!-- Always force latest IE rendering engine or request Chrome Frame -->
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">
-	<script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
-	<script src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
-    <script src="/dashboard/javascripts/script.js" type="text/javascript"></script>
-    <!-- Use title if it's in the page YAML frontmatter -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">
+    <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
+    <script src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
+    <script src="/javascripts/script.js" type="text/javascript"></script>
+    <link href="/stylesheets/style.css" rel="stylesheet" type="text/css" />
+    
     <title>VideoFeed</title>
 
     <meta name="description" content="video feed" />
     <meta name="keywords" content="video feed" />
-
-	<link href="/dashboard/stylesheets/style.css" rel="stylesheet" type="text/css" />
-
-    <link href="/dashboard/images/favicon.png" rel="icon" type="image/png" />
-
 
   </head>
 
