--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<meta name="keywords" content="video feed" />
 	  
 	<link rel="stylesheet" href="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">
-	<link href="stylesheets/style.css" rel="stylesheet" type="text/css" />
+	<link href="../stylesheets/style.css" rel="stylesheet" type="text/css" />
     
     	<title>VideoFeed</title>
   </head>
@@ -28,7 +28,7 @@
 	
 	<script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
 	<script src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
-	<script src="javascripts/script.js" type="text/javascript"></script>
+	<script src="../javascripts/script.js" type="text/javascript"></script>
 	<script>(function(d, s, id) {
 	  var js, fjs = d.getElementsByTagName(s)[0];
 	  if (d.getElementById(id)) return;
